# StockAPI

./: .gitignore  .gitmodules  CMakeBuild.bat  CMakeLists.txt
Modules/: CMakeLists.txt
Modules/LibStock/: CMakeLists.txt  CMakeSettings.cmake
Modules/LibStock/Include/: LibStock.h
Modules/LibStock/Src/: LibStock.cpp
Modules/StockAPI/: CMakeLists.txt  CMakeSettings.cmake
Modules/StockAPI/Src/: main.cpp
