include(CMakeSettings.cmake)

# Include
set(SCAF_VAR_INCLUDE_EXTENSIONS "*.h")
SCAF_UTILITY_FUNC_GET_FILES_IN_DIRECTORY_RECURSIVE(
    "Include"
    "${SCAF_VAR_INCLUDE_EXTENSIONS}"
    VAR_SCAF_INCLUDES)

SCAF_UTILITY_FUNC_SOURCE_GROUP("${VAR_SCAF_INCLUDES}")

# Src
set(SCAF_VAR_SOURCE_EXTENSIONS "*.h" "*.cpp")
SCAF_UTILITY_FUNC_GET_FILES_IN_DIRECTORY_RECURSIVE(
    "Src"
    "${SCAF_VAR_SOURCE_EXTENSIONS}"
    VAR_SCAF_SOURCES)

SCAF_UTILITY_FUNC_SOURCE_GROUP("${VAR_SCAF_SOURCES}")

add_library(${SCAF_VAR_MODULE_NAME} ${VAR_SCAF_INCLUDES} ${VAR_SCAF_SOURCES})
set_target_properties(${SCAF_VAR_MODULE_NAME} PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY    ${SCAF_VAR_OUTPUT_DIR}/$<CONFIG>
    LIBRARY_OUTPUT_DIRECTORY    ${SCAF_VAR_OUTPUT_DIR}/$<CONFIG>
    LINKER_LANGUAGE             CXX
    CXX_STANDARD                20
)
