include(CMakeSettings.cmake)

# Include
GENERATE_LIBRARY_API_HEADER(
    ${SCAF_VAR_MODULE_NAME}
    ${SCAF_VAR_MODULE_IS_SHARED_LIB}
    "Include"
)

set(SCAF_VAR_INCLUDE_EXTENSIONS "*.h")
SCAF_UTILITY_FUNC_GET_FILES_IN_DIRECTORY_RECURSIVE(
    "Include"
    "${SCAF_VAR_INCLUDE_EXTENSIONS}"
    VAR_SCAF_INCLUDES)

SCAF_UTILITY_FUNC_SOURCE_GROUP("${VAR_SCAF_INCLUDES}")

# Src
set(SCAF_VAR_SOURCE_EXTENSIONS "*.h" "*.cpp")
SCAF_UTILITY_FUNC_GET_FILES_IN_DIRECTORY_RECURSIVE(
    "Src"
    "${SCAF_VAR_SOURCE_EXTENSIONS}"
    VAR_SCAF_SOURCES)

SCAF_UTILITY_FUNC_SOURCE_GROUP("${VAR_SCAF_SOURCES}")

if (${SCAF_VAR_MODULE_IS_SHARED_LIB})
    set(VAR_LIB_TYPE SHARED)
else ()
    set(VAR_LIB_TYPE STATIC)
endif ()

add_library(${SCAF_VAR_MODULE_NAME} ${VAR_LIB_TYPE} 
    ${VAR_SCAF_INCLUDES} ${VAR_SCAF_SOURCES})
set_target_properties(${SCAF_VAR_MODULE_NAME} PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY    ${SCAF_VAR_OUTPUT_DIR}/$<CONFIG>
    LIBRARY_OUTPUT_DIRECTORY    ${SCAF_VAR_OUTPUT_DIR}/$<CONFIG>
    RUNTIME_OUTPUT_DIRECTORY    ${SCAF_VAR_OUTPUT_DIR}/$<CONFIG>
    SCAF_INCLUDE_DIRECTORY      ${CMAKE_CURRENT_LIST_DIR}/Include
    LINKER_LANGUAGE             CXX
    CXX_STANDARD                20
)

if (${SCAF_VAR_MODULE_IS_SHARED_LIB})
    string(REGEX REPLACE "([a-z])([A-Z])" "\\1_\\2" VAR_TARGET_NAME_WITH_UNDERBAR ${SCAF_VAR_MODULE_NAME})
    string(TOUPPER ${VAR_TARGET_NAME_WITH_UNDERBAR} VAR_UPPER_PASCAL_CASE_TARGET_NAME)

    target_compile_definitions(${SCAF_VAR_MODULE_NAME} PRIVATE "${VAR_UPPER_PASCAL_CASE_TARGET_NAME}_BUILD_SHARED")
endif ()
