include(CMakeSettings.cmake)

set(SCAF_VAR_SOURCE_EXTENSIONS "*.h" "*.cpp")
SCAF_UTILITY_FUNC_GET_FILES_IN_DIRECTORY_RECURSIVE(
    "Src"
    "${SCAF_VAR_SOURCE_EXTENSIONS}"
    VAR_SCAF_SOURCES)

SCAF_UTILITY_FUNC_SOURCE_GROUP("${VAR_SCAF_SOURCES}")

add_executable(${SCAF_VAR_MODULE_NAME} ${VAR_SCAF_SOURCES})
set_target_properties(${SCAF_VAR_MODULE_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY    ${SCAF_VAR_OUTPUT_DIR}/$<CONFIG>
    LINKER_LANGUAGE             CXX
    CXX_STANDARD                20
)

set_property(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${SCAF_VAR_MODULE_NAME})
